<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@drawable/custom_bg_of_noti_alarm"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/ivTitle"
        android:text="@string/sleep_music"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_marginTop="3dp"
        android:src="@drawable/ic_checkbox_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvAlarm"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:text="@string/alarm"
        android:layout_marginTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivTitle"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSnoozeNotiAlarm"
            android:text="@string/snooze"
            android:textColor="#FF8565"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_width="113dp"
            android:layout_height="30dp"
            android:background="@drawable/custom_shape_set_day_alarm_active"/>

        <TextView
            android:id="@+id/tvTurnOffNotiAlarm"
            android:text="@string/turn_off"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_width="113dp"
            android:layout_height="30dp"
            android:background="@drawable/custom_button_turn_off_alarm"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

</LinearLayout>