<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#021039"
    tools:context=".ui.alarmclock.AlarmClockFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivBGTop"
            android:background="@drawable/bg_top_of_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="375:233"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSetting"
            android:text="@string/setting_setting_screen"
            style="@style/text_of_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/ivBGTop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <RelativeLayout
            android:id="@+id/rltModeDarkOrLight"
            android:background="@drawable/custom_shape_of_setting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/button_of_screen"
            android:layout_marginTop="15dp"

            app:layout_constraintTop_toBottomOf="@+id/tvSetting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:text="@string/dark_mode"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="22dp"
                android:layout_marginStart="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="18sp"
                android:src="@drawable/ic_dark_mode" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvSettingUpgrade"
            android:background="@drawable/custom_shape_of_setting_upgrade"
            android:text="@string/upgrade_to_premium"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:paddingTop="22dp"
            android:paddingBottom="22dp"
            android:paddingStart="18dp"
            android:paddingEnd="16dp"
            style="@style/button_of_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"

            app:layout_constraintTop_toBottomOf="@id/rltModeDarkOrLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        
        <TextView
            android:id="@+id/tvLanguage"
            android:text="@string/language"
            style="@style/text_of_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginStart="16dp"

            app:layout_constraintTop_toBottomOf="@+id/tvSettingUpgrade"
            app:layout_constraintStart_toStartOf="parent"/>

        <RelativeLayout
            android:id="@+id/rltLanguageSetting"
            android:background="@drawable/custom_shape_of_setting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/button_of_screen"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"

            app:layout_constraintTop_toBottomOf="@+id/tvLanguage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18sp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="22dp"
                android:text="@string/language_setting"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="28dp"
                android:foregroundGravity="center_vertical"
                android:src="@drawable/ic_extend" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvFadeOutDuration"
            android:text="@string/fade_out_duration"
            style="@style/text_of_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:layout_marginStart="16dp"

            app:layout_constraintTop_toBottomOf="@+id/rltLanguageSetting"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvCustomFadeOutDuration"
            android:text="@string/custom_fade_out_duration_is_only_used_with_active_timer"
            android:textSize="11sp"
            android:textColor="#80879c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginStart="16dp"

            app:layout_constraintTop_toBottomOf="@+id/tvFadeOutDuration"
            app:layout_constraintStart_toStartOf="parent"/>

        <RelativeLayout
            android:id="@+id/rltFadeOutDuration"
            android:background="@drawable/custom_shape_of_setting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/button_of_screen"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"

            app:layout_constraintTop_toBottomOf="@+id/tvCustomFadeOutDuration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18sp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="22dp"
                android:text="@string/_10_seconds"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="28dp"
                android:foregroundGravity="center_vertical"
                android:src="@drawable/ic_extend" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_shape_of_setting"
            android:orientation="vertical"
            style="@style/button_of_screen"
            android:layout_marginTop="21dp"
            android:paddingTop="31dp"
            android:paddingBottom="31dp"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"

            app:layout_constraintTop_toBottomOf="@+id/rltFadeOutDuration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tvContactUsST"
                android:text="@string/contact_us"
                style="@style/text_of_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvTermsOfServiceST"
                android:text="@string/terms_of_service"
                style="@style/text_of_screen"
                android:layout_marginTop="21dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvPrivacyPolicyST"
                android:text="@string/privacy_policy"
                style="@style/text_of_screen"
                android:layout_marginTop="21dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>