<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:background="@drawable/custom_dialog_update_favorite"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivCloseUpdateFavoriteDialog"
        android:src="@drawable/ic_closedialog"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_marginStart="19dp"
        android:layout_marginTop="5dp"
        android:id="@+id/rltNameFavoriteMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvNameOfListFavorite"
            android:layout_width="200dp"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:text="@string/my_mix_lorem_ipsum"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivEditFavoriteMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_toEndOf="@id/tvNameOfListFavorite"
            android:background="@drawable/custom_shape_edit_favorite"
            android:src="@drawable/ic_edit_favorite" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cstrEditNameFavoriteMusic"
        android:visibility="gone"
        android:layout_marginStart="19dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edNameUpdateFavoriteMusicList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:hint="@string/enter_name"
            android:textColorHint="@color/white"
            app:layout_constraintWidth_percent="0.7"
            android:textCursorDrawable="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/ivAcpEditNameFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:src="@drawable/ic_acp"

            app:layout_constraintLeft_toRightOf="@id/edNameUpdateFavoriteMusicList"
            app:layout_constraintBottom_toBottomOf="@id/edNameUpdateFavoriteMusicList"
            app:layout_constraintTop_toTopOf="@id/edNameUpdateFavoriteMusicList"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvListMusicOfFavorite"
        android:padding="9dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvUpdateFavoriteMusic"
        android:text="@string/name_of_button_update"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:background="@drawable/custom_button_add_favorite_music"
        android:layout_width="200dp"
        android:layout_height="42dp"/>

    <TextView
        android:id="@+id/tvDeleteFavoriteMusic"
        android:text="@string/delete_track_favorite_music"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="26dp"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="#FF4748"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>