<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:layout_width="343dp"
    android:layout_height="421dp"
    android:paddingBottom="30dp"
    android:background="@drawable/custom_layout_of_set_time_off_music">

    <ImageView
        android:id="@+id/ivCloseDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_closedialog"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <NumberPicker
        android:id="@+id/npHourOffMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/NumberPickerTheme"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_chainStyle="packed"

        app:layout_constraintRight_toLeftOf="@+id/tvCenter2Np"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCloseDialog"/>

    <TextView
        android:id="@+id/tvCenter2Np"
        android:text="@string/center_of_np"
        android:padding="10dp"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintRight_toLeftOf="@+id/npMinutesOffMusic"
        app:layout_constraintTop_toTopOf="@+id/npHourOffMusic"
        app:layout_constraintBottom_toBottomOf="@+id/npHourOffMusic"
        app:layout_constraintLeft_toRightOf="@+id/npHourOffMusic"/>

    <NumberPicker
        android:id="@+id/npMinutesOffMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:theme="@style/NumberPickerTheme"

        app:layout_constraintLeft_toRightOf="@+id/tvCenter2Np"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCloseDialog"/>

    <TextView
        android:id="@+id/tvTimerCustomOffMusic"
        android:text="@string/name_of_button_set_time_start_timer"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/custom_button_add_favorite_music"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="33dp"

        app:layout_constraintTop_toBottomOf="@id/npHourOffMusic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
        android:id="@+id/tvRemoveTimer"
        android:text="@string/no_time_off_music"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="#FF4748"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="17dp"

        app:layout_constraintTop_toBottomOf="@id/tvTimerCustomOffMusic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>